Initial Views and navigation (so far no ViewModel)
Related Work Items: #19

--- a/SurveyAnswererApp/SurveyAnswererApp/Views/AboutPage.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/AboutPage.xaml
@@ -3,8 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
+             xmlns:q="http://xml.attributes.are/ignored"
+             mc:Ignorable="d q"
              x:Class="SurveyAnswererApp.Views.AboutPage"
+             
              xmlns:vm="clr-namespace:SurveyAnswererApp.ViewModels"
              Title="{Binding Title}">
     
