New View for NumberAnswer, Bindings for more AnswerViews Removed unused View file
Related Work Items: #43

--- a/SurveyAnswererApp/SurveyAnswererApp/Views/AnswerMultipleChoiceView.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/AnswerMultipleChoiceView.xaml
@@ -12,7 +12,7 @@
       <Label Text="{Binding Answer.AnswerText}"
              HorizontalOptions="StartAndExpand" />
       <CheckBox IsEnabled="True"
-                IsChecked="False"
+                IsChecked="{Binding MultipleChoiceAnswerSelection}"
                 x:Name="MultipleChoiceSelection"
                 HorizontalOptions="End" />
     </StackLayout>
