--- a/SurveyAnswererApp/SurveyAnswererApp/Views/AnswerSingleChoiceView.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/AnswerSingleChoiceView.xaml
@@ -8,7 +8,11 @@
              mc:Ignorable="d"
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              xmlns:sf="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+             xmlns:style="clr-namespace:SurveyAnswererApp.Views.Style;assembly=SurveyAnswererApp"
              x:Class="SurveyAnswererApp.Views.AnswerSingleChoiceView">
+  <ContentView.Resources>
+    <style:TextStyleResource />
+  </ContentView.Resources>
   <ContentView.Content>
     <StackLayout Orientation="Horizontal">
 
@@ -22,7 +26,9 @@
       <!-- Note: Does not update, does not fire command. Hotfix -->
       <input:RadioButton Text="{Binding Answer.AnswerText}"
                          x:Name="SingleChoiceSelection" 
+                         Style="{StaticResource AnswerRadioButton}"
                          Clicked="SingleChoiceSelection_OnClicked"
+                         HorizontalOptions="FillAndExpand"
                          />
 
     </StackLayout>
