--- a/SurveyAnswererApp/SurveyAnswererApp/Views/AnswerYesNoView.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/AnswerYesNoView.xaml
@@ -5,24 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
+             xmlns:style="clr-namespace:SurveyAnswererApp.Views.Style;assembly=SurveyAnswererApp"
              mc:Ignorable="d"
              x:Class="SurveyAnswererApp.Views.AnswerYesNoView">
   <ContentView.Resources>
-    <ResourceDictionary>
-
-      <Style x:Key="TestRadioCheckBox" TargetType="CheckBox">
-        <Setter Property="Color" Value="Turquoise" />
-      </Style>
-
-      <CheckBox x:Key="RadioButton" />
-      <Color x:Key="Primary">#2196F3</Color>
-      <Color x:Key="Accent">#96d1ff</Color>
-      <Color x:Key="LightTextColor">#999999</Color>
-    </ResourceDictionary>
+        <style:TextStyleResource />
   </ContentView.Resources>
-
-
-
   <ContentView.Content>
     <StackLayout Orientation="Vertical"
                  HorizontalOptions="CenterAndExpand">
@@ -35,30 +23,10 @@
           SelectedIndex="{Binding YesNoAnswerSelection}"
           Orientation="Horizontal">
           <input:RadioButton Text="Yes" 
-                             CircleColor="Green"
-                             Color="Green"
-                             />
+                             Style="{StaticResource YesAnswerRadioButton}" />
           <input:RadioButton Text="No"
-                             CircleColor="Red"
-                             Color="Red"
-                             />
+                             Style="{StaticResource NoAnswerRadioButton}" />
         </input:RadioButtonGroupView>
-
-        <!-- Solution with checkboxes, internal solution  -->
-        <!-- <CheckBox IsEnabled="True" -->
-        <!--           IsChecked="False"  -->
-        <!--           x:Name="yesButton"  -->
-        <!--           Color="Green" -->
-        <!--           CheckedChanged="YesButton_OnCheckedChanged" -->
-        <!--           VerticalOptions="Center"/> -->
-        <!-- <Label Text="No" -->
-        <!--        VerticalOptions="Center"/> -->
-        <!-- <CheckBox IsEnabled="True" -->
-        <!--           IsChecked="False"  -->
-        <!--           x:Name="noButton" -->
-        <!--           Color="Red" -->
-        <!--           CheckedChanged="NoButton_OnCheckedChanged" -->
-        <!--           VerticalOptions="Center"/> -->
       </StackLayout>
     </StackLayout>
   </ContentView.Content>
